<resources>
    <string name="app_name">MyMedcine</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lastTakenLabel">Last taken</string>
    <string name="remindersLabel">Reminders</string>
    <string name="suspendbtn">Suspend</string>
    <string name="instructions_label">How to use</string>
    <string name="reasons_label">Reason</string>
    <string name="add_dose_button">ADD DOSE</string>
    <string name="refills_label">Prescription Refills</string>
    <string name="refillsBTN">Refill</string>
    <string name="edit_medicine_drug_name_label">Drug Name</string>
    <string name="edit_medicine_drug_reminder_label">Reminding Times</string>
    <string name="edit_medicine_drug_type_label">Type</string>
    <string name="pill">Pill</string>
    <string name="injection">Injection</string>
    <string name="powder">Powder</string>
    <string name="drops">Drops</string>
    <string name="inhaler">Inhaler</string>
    <string name="nextBtn">Next</string>
    <string name="drugQty">Quantity</string>
    <string name="unit_g">g</string>
    <string name="unit_mcg">mcg</string>
    <string name="unit_meq">mEq</string>
    <string name="unit_mc_ml">mc/ml</string>
    <string name="unit_mcg_ml">mcg/ml</string>
    <string name="drug_scheduling">scheduling</string>
    <string name="drug_starting_date">Starting Date</string>
    <string name="select_drug_date">Select Date</string>
    <string name="drug_symbol">Drug Icons</string>
    <string name="more_opitions_Btn">other</string>
    <string name="strength">Strength</string>
    <string name="severityofmedication">Severity Of Drug</string>
    <string name="Presstoadjust">press_to_adjust</string>
    <string name="beforeating">before_eating</string>
    <string name="whileeating">While Eating</string>
    <string name="aftereating">After eating</string>
    <string name="doesnotmatter">does not matter</string>
    <string name="select_drug_Time">Select Drug Time</string>
    <string name="at_any_time">At any Time</string>
    <string name="select_drug_amaount">select_drug_amount</string>
    <string name="WhenIhaveleft">when i have left</string>
    <string name="Aremindertofillthemedicine">Filling the prescription</string>
    <string name="drug_amount">drug amount</string>
    <string name="refill_amount">Refill amount</string>
    <string name="Fillingtheprescription">Filling the Prescription</string>
    <string name="drug_instructions">should this medicine be taken while eating</string>
    <string name="add_health_taker">Add health taker</string>
    <string name="send">send invitation</string>
    <string name="add_med">Add med</string>
    <string-array name="units">
        <item>@string/unit_g</item>
        <item>@string/unit_mc_ml</item>
        <item>@string/unit_mcg</item>
        <item>@string/unit_meq</item>
        <item>@string/unit_mcg_ml</item>
    </string-array>
    <string-array name="drug_types">
        <item>@string/pill</item>
        <item>@string/injection</item>
        <item>@string/inhaler</item>
        <item>@string/drops</item>
        <item>@string/powder</item>
    </string-array>
    <string name="every_day">Every Day</string>
    <string name="certain_days_of_the_week">specific days of the week</string>
    <string name="as_needed">only as needed</string>

    <string-array name="recurrency">
        <item>@string/every_day</item>
        <item>@string/certain_days_of_the_week</item>
        <item>@string/as_needed</item>
    </string-array>
    <string name="once">once a day</string>
    <string name="twice">twice a day</string>
    <string-array name="reminding_times_of_hours">
        <item>@string/once</item>
        <item>@string/twice</item>
        <item>@string/three_times</item>
    </string-array>
    <string name="username">User Name</string>
    <string name="emptyPasswordError">password is required</string>
    <string name="emptyNameError">name is required</string>
    <string name="emptyEmailError">email is required</string>
    <string name="shortPasswordError">password must contain at least 6 character</string>
    <string name="invalidEmailError">provide valid Email</string>
    <string name="timeSample">8:00 am</string>
    <string name="homePage">Home</string>
    <string name="medicinePage">Medicine</string>
    <string name="takerPage">Taker</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="noAccount">You do not have an account yet?</string>
    <string name="createAccount">create a new one</string>
    <string name="login">Login</string>
    <string name="registeration">Sign up</string>
    <string name="resetPassword">Forget your password?</string>
    <string name="save">Save</string>
    <string name="edit_medicine_drug_schdule_label">Schedul</string>
    <string name="edit_medicine_drug_med_icon_label">Med Icon</string>
    <string name="edit_medicine_drug_condition_label">Condition</string>
    <string name="edit_medicine_drug_med_strength_label">Strength</string>
    <string name="edit_medicine_drug_instruction_label">Instruction \nShould this be taken with food?</string>
    <string name="edit_medicine_drug_refill_label">Refill Reminder</string>
    <string name="edit_drug_current_amount">Amount of meds</string>
    <string name="edit_drug_before_eating">Before eating</string>
    <string name="edit_drug_while_eating">While eating</string>
    <string name="edit_drug_after_eating">After eating</string>
    <string name="edit_drug_instruct_doesnt_matter">Doesn\'t Matter</string>
    <string name="edit_drug_instruct_other">Any other instructions</string>
    <string name="edit_medicin_reason">type the reason of taking this drug</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="edit_medicine_select_hours">hours_reminders</string>
    <string name="three_times">three times a day</string>
    <string name="chronic_disease">Is chronic disease?</string>
    <string name="edit_drug_end_date">End Date</string>
    <string name="edit_drug_refill_reminder_switch">Drug Refill Reminder</string>
    <string name="edit_drug_refill_reminder_notify">How many meds do you want reminding before you get a refill Reminder</string>
    <string name="add_drug_toolbar_Title">Add Medecine</string>
    <string name="logout">Log out</string>
    <string name="Web_API_key">AIzaSyDom-wFiMbpMFRKuTSkp_nHN6mQa7WJXnY</string>
    <string name="change_drug_qty">Change Drug Quantity</string>
    <string name="refill_label">Current amount</string>
    <string name="cancelBtn">Cancel</string>
    <string name="add_drug_dose">Add Dose</string>
    <string name="addDoseBTN">"Add "</string>
    <string name="edit_drug_weekDays_date">Days On Week</string>
    <string name="notificationChannelID">Notification Channel ID</string>
    <string name="notificationChannelDescription">Notification Channel Description</string>
    <string name="notificationTitle">Medicine Time</string>
    <string name="notificationText">It\'s time to take</string>
    <string name="goToLogin">Already have an account ? </string>
    <string name="reschedule">reschedule</string>
    <string name="take">Take</string>
    <string name="skip">Skip</string>
</resources>