<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/edit_drug_name_caontainer"
            android:orientation="vertical"
            android:elevation="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/edit_medicine_drug_name_label"
                android:textSize="16sp"
                android:textFontWeight="600"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_drug_name" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/edit_drug_med_Type_caontainer"
            android:orientation="vertical"
            android:elevation="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/edit_medicine_drug_type_label"
                android:textSize="16sp"
                android:textFontWeight="600"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/edit_drug_types"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/edit_drug_med_schdule_caontainer"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/edit_medicine_drug_schdule_label"
                android:textSize="16sp"
                android:textFontWeight="600"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_drug_details_occurence"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/edit_drug_reminder_times_caontainer"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/edit_medicine_drug_reminder_label"
                    android:textSize="16sp"
                    android:textFontWeight="600"
                    android:layout_alignParentLeft="true"/>
            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/edit_drug_med_icon_caontainer"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/edit_medicine_drug_med_icon_label"
                android:textSize="16sp"
                android:textFontWeight="600"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/edit_drug_condition_caontainer"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/edit_medicine_drug_condition_label"
                android:textSize="16sp"
                android:textFontWeight="600"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/edit_drug_strength_caontainer"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/edit_medicine_drug_med_strength_label"
                android:textSize="16sp"
                android:textFontWeight="600"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/edit_drug_instructions_caontainer"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/edit_medicine_drug_instruction_label"
                android:textSize="16sp"
                android:textFontWeight="600"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/edit_drug_Refill_caontainer"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/edit_medicine_drug_refill_label"
                android:textSize="16sp"
                android:textFontWeight="600"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_drug_current_number"
                android:hint="@string/edit_drug_current_amount"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/edit_drug_Done_caontainer"
            android:orientation="vertical">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/save_drug"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>